--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         >
                           Skills
                         </button>
-                        <ul class="dropdown-menu service bg-transparent">
+                        <ul class="dropdown-menu">
                           <li><a class="dropdown-item skills">HTML5</a></li>
                           <li><a class="dropdown-item skills">CSS3</a></li>
                           <li>
@@ -187,7 +187,7 @@
                         >
                           Tools
                         </button>
-                        <ul class="dropdown-menu service bg-transparent">
+                        <ul class="dropdown-menu services">
                           <li>
                             <a class="dropdown-item skills"
                               >Visual Studio Code</a
@@ -211,7 +211,7 @@
                         >
                           Education
                         </button>
-                        <ul class="dropdown-menu service bg-transparent">
+                        <ul class="dropdown-menu">
                           <li>
                             <a class="dropdown-item skills"
                               >2020 - 2023<br />Lyallpur Khalsa College,
@@ -237,7 +237,7 @@
                         >
                           Experience
                         </button>
-                        <ul class="dropdown-menu service bg-transparent">
+                        <ul class="dropdown-menu">
                           <li>
                             <a class="dropdown-item skills"
                               >* July 2023 - PRESENT <br />
@@ -246,8 +246,10 @@
                               <b>Content Writer and Systems Analyst <br /> </b>
                               * Developed and managed engaging, SEO-optimized
                               <br />
-                              content for various educational platforms, <br />
-                              ensuring clarity and increased visibility. <br />
+                              content for various educational platforms,
+                              <br />
+                              ensuring clarity and increased visibility.
+                              <br />
                               * Conducted in-depth systems analysis to optimize
                               <br />
                               hardware and software configurations, enhancing
@@ -259,28 +261,30 @@
                               interaction by aligning with audience needs.
                               <br />
                               <br />
-                              <br />
+                            </a>
+                          </li>
 
-                              <p>
-                                * January 2023 - March 2023 <br />
-                                Ansh Infotech, Ludhiana, India <br />
-                                <b>Web Developer </b><br />
-                                * Contributed to the development and maintenance
-                                <br />
-                                of a PHP-based project, focusing on enhancing
-                                <br />
-                                functionality and user interface design. <br />
-                                * Implemented hardware upgrades and software
-                                <br />
-                                optimizations that significantly improved system
-                                <br />
-                                performance and reliability. <br />
-                                * Integrated new features using HTML5, CSS3, and
-                                <br />
-                                JavaScript, resulting in a 20% increase in
-                                project <br />
-                                engagement. <br /></p
-                            ></a>
+                          <li>
+                            <a class="dropdown-item skills"
+                              >* January 2023 - March 2023 <br />
+                              Ansh Infotech, Ludhiana, India <br />
+                              <b>Web Developer </b><br />
+                              * Contributed to the development and maintenance
+                              <br />
+                              of a PHP-based project, focusing on enhancing
+                              <br />
+                              functionality and user interface design. <br />
+                              * Implemented hardware upgrades and software
+                              <br />
+                              optimizations that significantly improved system
+                              <br />
+                              performance and reliability. <br />
+                              * Integrated new features using HTML5, CSS3, and
+                              <br />
+                              JavaScript, resulting in a 20% increase in project
+                              <br />
+                              engagement. <br />
+                            </a>
                           </li>
                         </ul>
                       </div>
@@ -508,9 +512,7 @@
         <div id="Contact" class="container p-5">
           <div class="row justify-content-center align-items-center">
             <!-- Image Column -->
-            <div
-              class="col-lg-5 text-center mb-4 mb-lg-0"
-            >
+            <div class="col-lg-5 text-center mb-4 mb-lg-0">
               <img
                 src="Images/contact-P.png"
                 alt="Contact Image"
