--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="Images/logo1.jpg">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -612,7 +613,7 @@
           <div class="row align-items-center">
             <!-- Copyright Text -->
             <div class="col-md-6 text-center text-md-start mb-2 mb-md-0">
-              <p class="mb-0">© 2024 Gurwinder Parhar | All Rights Reserved</p>
+              <p class="mb-0">© 2025 Gurwinder Parhar | All Rights Reserved</p>
             </div>
             <!-- Social Media Icons -->
             <div class="col-md-6 text-center text-md-end">
