--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
                         >
-                          Tools
+                          Tools / Frameworks
                         </button>
                         <ul class="dropdown-menu services">
                           <li>
@@ -201,6 +201,7 @@
                           <li><a class="dropdown-item skills">Linux</a></li>
                           <li><a class="dropdown-item skills">GitHub</a></li>
                           <li><a class="dropdown-item skills">MySQL</a></li>
+                          <li><a class="dropdown-item skills">React js</a></li>
                         </ul>
                       </div>
                       <div class="p-2">
