--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                           <li><a class="dropdown-item skills">GitHub</a></li>
                           <li><a class="dropdown-item skills">MySQL</a></li>
                           <li><a class="dropdown-item skills">React js</a></li>
+                          <li><a class="dropdown-item skills">Bootstrap</a></li>
                         </ul>
                       </div>
                       <div class="p-2">
