--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <a class="dropdown-item skills">Adobe XD/ Figma</a>
                           </li>
                           <li><a class="dropdown-item skills">MS Office</a></li>
-                          <li><a class="dropdown-item skills">Linux</a></li>
+                          <li><a class="dropdown-item skills">Kali Linux/ Ubuntu</a></li>
                           <li><a class="dropdown-item skills">GitHub</a></li>
                           <li><a class="dropdown-item skills">MySQL</a></li>
                           <li><a class="dropdown-item skills">React js</a></li>
